# autorepo

./: .gitignore  README.md  autorepo-directory-tree-2024-12-20-18-03-UCT.txt  cline_task_dec-20-2024_12-42-12-pm.md  directory-tree.txt  llm-prompting-notepad.txt  main.py  pyproject.toml  requirements.txt  scheduler.py  settings.json
AutomaticRepoUpdater/: __init__.py  git_operations.py
docs/: Automatic_Repo_Updater.md
src/: custom_instructions.txt
src/autorepo/automatic_repo_updater/: git_operations.py
src/autorepo/ui/: main_window.py  ui.py
src/autorepo/utils/: settings.py
tests/: __init__.py  test_main_window.py
tests/src/: tests.md
ui/: __init__.py  main_window.py  themes.py
ui/src/: ui.md
utils/: __init__.py  logger.py  settings.py
utils/src/: utils.md
