[tool.poetry]
name = "autorepo"
version = "0.1.0"
description = "An automatic repository updater with scheduling capabilities"
authors = ["Alex Jensen <thanotosq@gmail.com>"]
readme = "README.md"
packages = [
    {include = "ui"},
    {include = "utils"},
    {include = "AutomaticRepoUpdater"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyqt6 = "^6.7.1"
pyqt6-qt6 = "^6.7.3"
pyqt6-sip = "^13.8.0"
gitpython = "^3.1.43"
pathlib = "^1.0.1"
pytest = "^8.3.3"
pywin32 = "^308"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"