[tool.poetry]
name = "autorepo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "AutomaticRepoUpdater"}]

[tool.poetry.dependencies]
python = "^3.13"
PyQt6 = {extras = ["qt6"], version = "^6.6.0"}
cerberus = "^1.3.4"
gitpython = "^3.1.32"
win10toast = "^0.9"
pytest = "^8.3.3"
pywin32 = "^308"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
