[project]
name = "autorepo"
version = "0.2.0"
description = "Automated Git repository updater with scheduling"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "pyqt6>=6.9.0",
    "gitpython>=3.1.44",
    "pytest>=8.3.5",
    "pywin32==310",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
